k8-manifests/luhn-collator-1-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: luhn-collator-1
  namespace: hashed-network
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - c1.luhn.network
    secretName: luhn-collator-1
  rules:
  - host: c1.luhn.network
    http:
      paths:
      - pathType: Prefix
        path: /cp2p/
        backend:
          service:
            name: luhn-collator-1
            port:
              number: 40333
      - pathType: Prefix
        path: /
        backend:
          service:
            name: luhn-collator-1
            port:
              number: 9946
      - pathType: Prefix
        path: /rp2p/
        backend:
          service:
            name: luhn-collator-1
            port:
              number: 30333
      - pathType: Prefix
        path: /rws/
        backend:
          service:
            name: luhn-collator-1
            port:
              number: 9944
      - pathType: Prefix
        path: /rpc/
        backend:
          service:
            name: luhn-collator-1
            port:
              number: 9933
